added dto class for expenses